style: Hide scrollbars globally for cleaner UI

--- a/src/pages/feed.html
+++ b/src/pages/feed.html
@@ -35,6 +35,16 @@
   </script>
 </head>
 <style>
+  /* HIDE SCROLLBAR */
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  * {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+
   .image-preview {
     display: flex;
     gap: 10px;
