--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -39,6 +39,18 @@
             window.location.href = "confirm-password.html";
         }
     </script>
+    </script>
+    <style>
+        /* HIDE SCROLLBAR */
+        ::-webkit-scrollbar {
+            display: none;
+        }
+
+        * {
+            scrollbar-width: none;
+            -ms-overflow-style: none;
+        }
+    </style>
 </head>
 
 <body
