--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -170,6 +170,19 @@
                 Living in the moment. No stats, just vibes. 🌊
             </p>
 
+            <div class="flex flex-wrap gap-4 mt-3 text-sm text-gray-500">
+                <span id="displayLocation" class="hidden items-center gap-1">
+                    📍 <span class="text-gray-700 dark:text-gray-300"></span>
+                </span>
+                <a id="displayWebsite" href="#" target="_blank"
+                    class="hidden items-center gap-1 hover:text-zynk transition">
+                    🔗 <span class="truncate max-w-[150px]"></span>
+                </a>
+                <span id="displayDob" class="hidden items-center gap-1">
+                    🎂 <span class="text-gray-700 dark:text-gray-300"></span>
+                </span>
+            </div>
+
             <!-- METRICS -->
             <div class="flex gap-6 mt-4 text-gray-500 text-sm">
                 <div class="flex items-center gap-1 cursor-pointer hover:text-gray-900 dark:hover:text-white transition group"
@@ -264,6 +277,20 @@
 
             <textarea id="editBio" placeholder="Bio" rows="3"
                 class="w-full mb-4 px-4 py-3 rounded-xl bg-black border border-gray-700 text-white focus:border-zynk focus:outline-none transition"></textarea>
+
+            <div class="space-y-4 mb-6">
+                <input id="editLocation" placeholder="Location 📍"
+                    class="w-full px-4 py-3 rounded-xl bg-black border border-gray-700 text-white focus:border-zynk focus:outline-none transition" />
+
+                <input id="editWebsite" placeholder="Website 🔗"
+                    class="w-full px-4 py-3 rounded-xl bg-black border border-gray-700 text-white focus:border-zynk focus:outline-none transition" />
+
+                <div class="relative">
+                    <label class="block text-xs text-gray-400 mb-1 ml-1">Date of Birth 🎂</label>
+                    <input id="editDob" type="date"
+                        class="w-full px-4 py-3 rounded-xl bg-black border border-gray-700 text-white focus:border-zynk focus:outline-none transition" />
+                </div>
+            </div>
 
             <div class="flex gap-4">
                 <button onclick="closeEditModal()"
