feat(profile): Add Joined Date display logic

--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -181,6 +181,9 @@
                 <span id="displayDob" class="hidden items-center gap-1">
                     🎂 <span class="text-gray-700 dark:text-gray-300"></span>
                 </span>
+                <span id="displayJoined" class="hidden items-center gap-1">
+                    📅 <span class="text-gray-700 dark:text-gray-300"></span>
+                </span>
             </div>
 
             <!-- METRICS -->
