--- a/src/pages/explore.html
+++ b/src/pages/explore.html
@@ -46,20 +46,200 @@
         </nav>
     </aside>
 
-    <!-- MAIN AREA -->
-    <main class="flex-1 flex flex-col justify-center items-center p-6 text-center">
-        <div class="max-w-md">
-            <h2 class="text-3xl font-bold mb-4">Explore <span class="text-zynk">Coming Soon</span></h2>
-            <p class="text-gray-500 dark:text-gray-400 mb-8">
-                Discover new content, people, and ideas. The universe of ZYNK is expanding.
-            </p>
+    <!-- MAIN CONTENT -->
+    <main class="flex-1 max-w-2xl mx-auto border-x border-gray-200 dark:border-gray-800 overflow-y-auto w-full">
 
-            <a href="feed.html"
-                class="px-6 py-2 bg-gray-200 dark:bg-gray-800 rounded-xl hover:bg-gray-300 dark:hover:bg-gray-700 transition">
-                Back to Feed
-            </a>
+        <!-- HEADER & SEARCH -->
+        <div
+            class="sticky top-0 z-10 bg-white/80 dark:bg-dark/80 backdrop-blur-md border-b border-gray-200 dark:border-gray-800">
+            <div class="p-4">
+                <div class="relative">
+                    <input type="text" placeholder="Search ZYNK..."
+                        class="w-full bg-gray-100 dark:bg-[#121212] border-none rounded-full py-2.5 px-12 text-gray-900 dark:text-white placeholder-gray-500 focus:ring-2 focus:ring-zynk focus:outline-none transition">
+                    <svg class="absolute left-4 top-3 text-gray-400" xmlns="http://www.w3.org/2000/svg" width="20"
+                        height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <circle cx="11" cy="11" r="8"></circle>
+                        <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                    </svg>
+                </div>
+            </div>
+
+            <!-- TABS -->
+            <div class="flex overflow-x-auto no-scrollbar items-center px-4 gap-2 pb-0">
+                <button onclick="switchExploreTab('foryou')" id="tab-foryou"
+                    class="explore-tab active group relative px-4 py-3 min-w-[max-content]">
+                    <span class="font-bold text-gray-900 dark:text-white transition-colors duration-200">For You</span>
+                    <div
+                        class="absolute bottom-0 left-0 w-full h-1 bg-zynk rounded-t-full transition-all duration-200 indicator">
+                    </div>
+                </button>
+                <button onclick="switchExploreTab('trending')" id="tab-trending"
+                    class="explore-tab group relative px-4 py-3 min-w-[max-content]">
+                    <span
+                        class="font-medium text-gray-500 group-hover:text-gray-900 dark:text-gray-500 dark:group-hover:text-gray-300 transition-colors duration-200">Trending</span>
+                    <div
+                        class="absolute bottom-0 left-0 w-full h-1 bg-transparent rounded-t-full transition-all duration-200 indicator">
+                    </div>
+                </button>
+                <button onclick="switchExploreTab('news')" id="tab-news"
+                    class="explore-tab group relative px-4 py-3 min-w-[max-content]">
+                    <span
+                        class="font-medium text-gray-500 group-hover:text-gray-900 dark:text-gray-500 dark:group-hover:text-gray-300 transition-colors duration-200">News</span>
+                    <div
+                        class="absolute bottom-0 left-0 w-full h-1 bg-transparent rounded-t-full transition-all duration-200 indicator">
+                    </div>
+                </button>
+                <button onclick="switchExploreTab('sports')" id="tab-sports"
+                    class="explore-tab group relative px-4 py-3 min-w-[max-content]">
+                    <span
+                        class="font-medium text-gray-500 group-hover:text-gray-900 dark:text-gray-500 dark:group-hover:text-gray-300 transition-colors duration-200">Sports</span>
+                    <div
+                        class="absolute bottom-0 left-0 w-full h-1 bg-transparent rounded-t-full transition-all duration-200 indicator">
+                    </div>
+                </button>
+                <button onclick="switchExploreTab('entertainment')" id="tab-entertainment"
+                    class="explore-tab group relative px-4 py-3 min-w-[max-content]">
+                    <span
+                        class="font-medium text-gray-500 group-hover:text-gray-900 dark:text-gray-500 dark:group-hover:text-gray-300 transition-colors duration-200">Entertainment</span>
+                    <div
+                        class="absolute bottom-0 left-0 w-full h-1 bg-transparent rounded-t-full transition-all duration-200 indicator">
+                    </div>
+                </button>
+            </div>
         </div>
+
+        <!-- CONTENT AREA -->
+        <div id="exploreContent" class="p-0">
+            <!-- Dynamic Content Injected Here -->
+        </div>
+
     </main>
+
+    <!-- RIGHT SIDEBAR -->
+    <aside class="hidden lg:block w-72 p-6 border-l border-gray-200 dark:border-gray-800">
+        <div class="bg-gray-100 dark:bg-[#121212] rounded-2xl p-4 mb-6">
+            <h2 class="font-bold text-lg mb-2">Subscribe to Premium</h2>
+            <p class="text-sm text-gray-500 mb-4">Unlock exclusive features and support the platform.</p>
+            <button
+                class="w-full bg-zynk text-black font-bold py-2 rounded-xl hover:opacity-90 transition">Subscribe</button>
+        </div>
+
+        <h2 class="font-semibold mb-4 text-gray-500 uppercase text-xs tracking-wider">Who to follow</h2>
+        <div class="space-y-4">
+            <!-- Mock Users -->
+            <div class="flex items-center gap-3">
+                <div class="w-10 h-10 rounded-full bg-blue-500"></div>
+                <div class="flex-1 overflow-hidden">
+                    <p class="font-bold truncate">Tech Insider</p>
+                    <p class="text-xs text-gray-500 truncate">@techinsider</p>
+                </div>
+                <button
+                    class="px-3 py-1 bg-white dark:bg-white text-black text-sm font-bold rounded-full hover:bg-gray-200 transition">Follow</button>
+            </div>
+            <div class="flex items-center gap-3">
+                <div class="w-10 h-10 rounded-full bg-purple-500"></div>
+                <div class="flex-1 overflow-hidden">
+                    <p class="font-bold truncate">Art Space</p>
+                    <p class="text-xs text-gray-500 truncate">@artdaily</p>
+                </div>
+                <button
+                    class="px-3 py-1 bg-white dark:bg-white text-black text-sm font-bold rounded-full hover:bg-gray-200 transition">Follow</button>
+            </div>
+        </div>
+    </aside>
+
+    <script>
+        // Mock Data for Tabs
+        const exploreData = {
+            foryou: [
+                { category: "Trending in Tech", title: "The Future of AI Agents", posts: "12.5K posts" },
+                { category: "Design", title: "Glassmorphism 2.0", posts: "5K posts" },
+                { category: "Viral", title: "#ZynkLaunch", posts: "50K posts" }
+            ],
+            trending: [
+                { category: "Global", title: "#WorldCup2026", posts: "1.2M posts" },
+                { category: "Music", title: "New Album Drop", posts: "850K posts" },
+                { category: "Politics", title: "Elections", posts: "400K posts" }
+            ],
+            news: [
+                { category: "Breaking", title: "SpaceX Mars Landing", posts: "2M posts" },
+                { category: "Economy", title: "Crypto Surge", posts: "100K posts" }
+            ],
+            sports: [
+                { category: "Football", title: "Champions League Final", posts: "500K posts" },
+                { category: "NBA", title: "Lakers vs Warriors", posts: "200K posts" }
+            ],
+            entertainment: [
+                { category: "Movies", title: "Dune: Part Three", posts: "300K posts" },
+                { category: "Gaming", title: "GTA VI Leaks", posts: "150K posts" }
+            ]
+        };
+
+        function switchExploreTab(tabName) {
+            // Update Tab UI
+            const tabs = document.querySelectorAll('.explore-tab');
+            tabs.forEach(tab => {
+                const text = tab.querySelector('span');
+                const line = tab.querySelector('.indicator');
+
+                if (tab.id === `tab-${tabName}`) {
+                    text.className = 'font-bold text-gray-900 dark:text-white transition-colors duration-200';
+                    line.classList.remove('bg-transparent');
+                    line.classList.add('bg-zynk');
+                } else {
+                    text.className = 'font-medium text-gray-500 group-hover:text-gray-900 dark:text-gray-500 dark:group-hover:text-gray-300 transition-colors duration-200';
+                    line.classList.add('bg-transparent');
+                    line.classList.remove('bg-zynk');
+                }
+            });
+
+            // Update Content
+            renderExploreContent(tabName);
+        }
+
+        function renderExploreContent(tabName) {
+            const container = document.getElementById('exploreContent');
+            const data = exploreData[tabName] || [];
+
+            // Random images for visual appeal
+            const randomImages = [
+                'https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?q=80&w=2564&auto=format&fit=crop',
+                'https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2670&auto=format&fit=crop',
+                'https://images.unsplash.com/photo-1550745165-9bc0b252726f?q=80&w=2670&auto=format&fit=crop'
+            ];
+
+            let html = '<div class="divide-y divide-gray-200 dark:divide-gray-800">';
+
+            data.forEach((item, index) => {
+                const img = randomImages[index % randomImages.length];
+                html += `
+                    <div class="p-4 hover:bg-gray-50 dark:hover:bg-white/5 transition cursor-pointer flex justify-between gap-4">
+                        <div class="flex-1">
+                            <span class="text-xs font-semibold text-gray-500 uppercase tracking-wide">${item.category}</span>
+                            <h3 class="font-bold text-base mt-0.5 mb-1">${item.title}</h3>
+                            <span class="text-xs text-gray-500">${item.posts}</span>
+                        </div>
+                        <div class="w-20 h-20 rounded-xl overflow-hidden">
+                             <!-- Placeholder image just for vibes -->
+                             <div class="w-full h-full bg-gray-800 flex items-center justify-center text-gray-600">#</div>
+                        </div>
+                        <div class="flex items-center">
+                            <button class="p-2 hover:bg-zynk/10 hover:text-zynk rounded-full transition">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="1"></circle><circle cx="12" cy="5" r="1"></circle><circle cx="12" cy="19" r="1"></circle></svg>
+                            </button>
+                        </div>
+                    </div>
+                `;
+            });
+
+            html += '</div>';
+            container.innerHTML = html;
+        }
+
+        // Initialize
+        switchExploreTab('foryou');
+    </script>
 
 
 
