--- a/src/pages/explore.html
+++ b/src/pages/explore.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>ZYNK — Explore</title>
+    <title>ZYNK — Discover</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Tailwind CDN -->
@@ -29,7 +29,7 @@
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            renderSidebar('Explore');
+            renderSidebar('Discover');
         });
     </script>
 </head>
