--- a/src/pages/notifications.html
+++ b/src/pages/notifications.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>ZYNK — Notifications</title>
+    <title>ZYNK — Ping</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Tailwind CDN -->
@@ -29,7 +29,7 @@
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            renderSidebar('Notifications');
+            renderSidebar('Ping');
         });
     </script>
 </head>
@@ -49,9 +49,9 @@
     <!-- MAIN AREA -->
     <main class="flex-1 flex flex-col justify-center items-center p-6 text-center">
         <div class="max-w-md">
-            <h2 class="text-3xl font-bold mb-4">Notifications <span class="text-zynk">Coming Soon</span></h2>
+            <h2 class="text-3xl font-bold mb-4">Ping <span class="text-zynk">Coming Soon</span></h2>
             <p class="text-gray-500 dark:text-gray-400 mb-8">
-                Stay updated with likes, replies, and reposts. The notification center is under construction.
+                Stay updated with likes, replies, and reposts. Your Ping center is under construction.
             </p>
 
             <a href="feed.html"
